Clean up project: Remove test files and standardize favicon

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="/logo.png" />
     <title>MMU Digital Campus</title>
     <meta name="description" content="Multimedia University of Kenya's Digital Campus - Elevating Learning, Empowering Futures" />
     <meta name="author" content="MMU" />
