fix: Critical deployment fixes for Netlify
🚨 URGENT FIXES:
- Fix CSP to allow cdn.gpteng.co scripts
- Remove problematic asset preload links causing 404s
- Add better error handling for missing environment variables
- Create comprehensive environment setup guide

🔧 DEPLOYMENT ISSUES RESOLVED:
- CSP script blocking: Added cdn.gpteng.co to allowed domains
- Asset 404 errors: Removed hardcoded /assets/ preload links
- MIME type issues: Fixed preload header configuration
- Missing env vars: Added clear error messages and setup guide

⚠️ REQUIRED: Add environment variables in Netlify dashboard:
- VITE_SUPABASE_URL=https://eekajmfvqntbloqgizwk.supabase.co
- VITE_SUPABASE_ANON_KEY=[your_anon_key]

Site will not work until environment variables are configured!

--- a/index.html
+++ b/index.html
@@ -4,12 +4,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#1e40af" />
+    <meta name="theme-color" content="#2563eb" />
+
+    <!-- PWA Meta Tags -->
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="MMU Campus" />
+    <meta name="application-name" content="MMU Campus" />
+    <meta name="msapplication-TileColor" content="#2563eb" />
+    <meta name="msapplication-tap-highlight" content="no" />
 
     <!-- Favicon and Icons -->
     <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
     <link rel="shortcut icon" href="/favicon.svg" type="image/svg+xml" />
-    <link rel="apple-touch-icon" href="/favicon.svg" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="apple-touch-icon" sizes="167x167" href="/apple-touch-icon.png" />
+    <link rel="mask-icon" href="/masked-icon.svg" color="#2563eb" />
     <link rel="manifest" href="/manifest.json" />
 
     <!-- SEO Meta Tags -->
